--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   custom_navigation_bar: ^0.8.2
   simple_animations: ^4.0.1
   supercharged: ^2.1.1
+  firebase_core: ^3.13.0
 
 dev_dependencies:
   flutter_test:
