--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: sneakers_app
-description: A Sneakers App - Flutter
+name: quick_fix
+description: A Servicing App - Flutter
 #  @CodeWithFlexz on Instagram
 #  AmirBayat0 on Github
 # Programming with Flexz on Youtube
