--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   simple_animations: ^4.0.1
   supercharged: ^2.1.1
   firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
 
 dev_dependencies:
   flutter_test:
